# jong-hong

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  Cargo.toml  docker-compose.dev.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  project.code-workspace  turbo.json
apps-api/auth/: Dockerfile  docker-compose.yml  farm.config.ts  package.json
apps-api/booking/: Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  farm.config.ts  package.json
apps-api/booking-v2/: .gitignore  Dockerfile  dev.js  package.json  tsup.config.ts
apps-api/booking/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241022_084056_create_room_table.rs
apps-api/booking/src/: config.rs  consumer.rs  db.rs  enviroment.ts  main.rs  main.ts
apps-api/booking/src/entity/: bookings.rs  mod.rs  prelude.rs  room_configs.rs
apps-api/booking/src/health/: health.controller.ts
apps-api/booking/src/service/: bookings.rs
apps-api/gateway/: Dockerfile  farm.config.ts  package.json  tsup.config.ts
apps-api/notification/: .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go  package.json
apps-api/penalty/: .gitignore  Dockerfile  Makefile  docker-compose.yaml  go.mod  go.sum  main.go  readme.md
apps-api/qr/: Dockerfile  README.md  bun.lockb  index.ts  package.json
apps-api/room/: .eslintrc.cjs  Dockerfile  docker-compose.yml  farm.config.ts  index.plugin.ts  package.json  tsconfig.json
apps-client/web/: .eslintrc.js  Dockerfile  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
deployments/: deploy.yaml
(+107 files in other folders)
