[package]
name = "booking"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
tokio = { version = "1.4", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.12"
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1.16"
serde_json = "1.0.132"
chrono ={ version = "0.4", features = ["serde"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
figment = { version = "0.10", features = ["yaml"] }
lazy_static = "1.5.0"
fenwick-tree = "0.1.0"


[build-dependencies]
tonic-build = "0.12"
